# qt-project-template

./: CMakeLists.txt  README.md  main.cpp  mymodel.cpp  mymodel.h
.github/workflows/: ccpp.yaml
